index updated and cv link updated

--- a/index.html
+++ b/index.html
@@ -151,28 +151,25 @@
     					<h2>Master of Computer Application</h2>
     					<span class="position">Instituion: Nirmala College, Muvattupuzha</span> <br>
 						<span class="position">University: Mahatma Gandhi University, Kottayam</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2018-2021</span>
     					<h2>Bachelor of Commerce</h2>
     					<span class="position">Instituion: Rajagiri College of Management and Applied Sciences, Kakkanad</span> <br>
 						<span class="position">University: Mahatma Gandhi University, Kottayam</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2016-2018</span>
     					<h2>Plus Two</h2>
     					<span class="position">Instituion: The Delta Study, Fort Kochi</span> <br>
 						<span class="position">Board: CBSE</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
     				</div>
     			</div>
 
     		</div>
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="Manu_Resume.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
