index updated again and cv link updated in other fields

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 	                <span class="number" data-number="2">0</span>
 	                <span>Acadamic Projects complete</span>
                 </p>
-                <p><a href="#" class="btn btn-primary py-3 px-3">Download CV</a></p>
+                <p><a href="Manu_Resume.pdf" class="btn btn-primary py-3 px-3">Download CV</a></p>
               </div>
 	          </div>
 	        </div>
@@ -141,7 +141,6 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Education</h1>
             <h2 class="mb-4">Education</h2>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
           </div>
         </div>
     		<div class="row">
@@ -181,10 +180,21 @@
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Certifications</h1>
             <h2 class="mb-4">Certifications</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
           </div>
         </div>
     		<div class="row">
+					<div class="col-md-4 text-center d-flex ftco-animate">
+						<a href="https://www.coursera.org/account/accomplishments/certificate/5LFARDENY9N3" class="services-1">
+							<span class="icon">
+								<i class="flaticon-ideas"></i>
+							</span>
+							<div class="desc">
+								<h3 class="mb-5">Introduction to Web Development by <b>Meta</b></h3>
+								<b><span>Issued on Aug 2023</span>
+								<h3 class="mb-5">Issued by Coursera</h3> </b>
+							</div>
+						</a>
+					</div>
 					<div class="col-md-4 text-center d-flex ftco-animate">
 						<a href="https://www.coursera.org/account/accomplishments/certificate/2H2C8RL2ZBD4#" class="services-1">
 							<span class="icon">
@@ -210,7 +220,7 @@
 						</a>
 					</div>
 					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="https://internalapp.nptel.ac.in/noc/Ecertificate/?q=NPTEL23CS27S4451100503072200" class="services-1">
+						<a href="https://www.coursera.org/account/accomplishments/verify/9B345E22W45J" class="services-1">
 							<span class="icon">
 								<i class="flaticon-ideas"></i>
 							</span>
@@ -234,7 +244,6 @@
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Skills</h1>
             <h2 class="mb-4">My Skills</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
           </div>
         </div>
 				<div class="row">
@@ -337,7 +346,6 @@
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Projects</h1>
             <h2 class="mb-4">My Projects</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
           </div>
         </div>
     		<div class="row">
@@ -372,7 +380,6 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Contact</h1>
             <h2 class="mb-4">Contact Me</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
           </div>
         </div>
 
